--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html ng-app="forumApp">
   <head>
-    <base href="/">
+    <base href="/home">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Angular Stack Setup</title>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="MainCtrl as main">
     <nav>
       <ul>
         <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="topicsIndex">Topics</a></li>
+        <li><a ui-sref="profile">Profile</a></li>
+        <li><a ui-sref="topicsIndex" ui-sref-active="active">Topics</a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="login" ui-sref-active="active">Login</a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="register" ui-sref-active="active">Register</a></li>
+        <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
       </ul>
     </nav>
     <main ui-view class="container">
