--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
       </ul>
     </nav>
-    <main ui-view class="container">
+    <main ui-view>
     </main>
   </body>
 </html>
