--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
   <body ng-controller="MainCtrl as main">
     <nav>
       <ul>
-        <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="profile">Profile</a></li>
+        <li><a ui-sref="home" class="logo">TT</a></li>
         <li><a ui-sref="topicsIndex" ui-sref-active="active">Topics</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="login" ui-sref-active="active">Login</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="register" ui-sref-active="active">Register</a></li>
         <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
+        <li ng-if="main.isAuthenticated()"><a ui-sref="profile" ui-sref-active="active">Profile</a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="register" ui-sref-active="active">Register</a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="login" ui-sref-active="active">Login</a></li>
       </ul>
     </nav>
     <main ui-view>
