--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Angular Stack Setup</title>
+    <title>Twitter Trends</title>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
